--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     <ul id="topMenu">
                         <li><a href="#">회사 소개 <span></span></a>
                             <ul>
-                                <li><a href="#">인사말</a></li>
-                                <li><a href="#">연혁</a></li>
+                                <li><a href="introduce.html">인사말</a></li>
+                                <li><a href="history.html">연혁</a></li>
                             </ul>
                         </li>
                         <li><a href="#">사업 실적 및 분야 <span></span></a>
@@ -41,24 +41,162 @@
             </header>
             <div class="slide_wrapper">
                 <ul class="slides">
-                    <li><img src="images/photo-1.jpg" alt=""></li>
-                    <li><img src="images/photo-2.jpg" alt=""></li>
-                    <li><img src="images/photo-3.jpg" alt=""></li>
+                    <li>
+                        <a href="#">
+                            <img src="images/photo-1.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/photo-2.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/photo-3.jpg" alt="">
+                        </a>
+                    </li>
                 </ul>
+                <p class="controls">
+                    <span class="prev"></span>
+                    <span class="next"></span>
+                </p>
             </div>
-            <p class="controls">
-                <span class="prev">prev</span>
-                <span class="next">next</span>
-            </p>
+
             <div id="contents">
                 <div id="tabMenu">
-
+                    <div class="wrapper">
+                        <div class="cols">
+                            <div class="col" ontouchstart="this.classList.toggle('hover');">
+                              <div class="container">
+                                <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+                                  <div class="inner">
+                                    <p>Diligord</p>
+                                    <span>Lorem ipsum</span>
+                                  </div>
+                                </div>
+                                <div class="back">
+                                  <div class="inner">
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col" ontouchstart="this.classList.toggle('hover');">
+                              <div class="container">
+                                <div class="front" style="background-image: url(https://unsplash.it/511/511/)">
+                                  <div class="inner">
+                                    <p>Rocogged</p>
+                                    <span>Lorem ipsum</span>
+                                  </div>
+                                </div>
+                                <div class="back">
+                                  <div class="inner">
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col" ontouchstart="this.classList.toggle('hover');">
+                              <div class="container">
+                                <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
+                                  <div class="inner">
+                                    <p>Strizzes</p>
+                                    <span>Lorem ipsum</span>
+                                  </div>
+                                </div>
+                                <div class="back">
+                                  <div class="inner">
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col" ontouchstart="this.classList.toggle('hover');">
+                              <div class="container">
+                                <div class="front" style="background-image: url(https://unsplash.it/503/503/)">
+                                  <div class="inner">
+                                    <p>Clossyo</p>
+                                    <span>Lorem ipsum</span>
+                                  </div>
+                                </div>
+                                <div class="back">
+                                  <div class="inner">
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col" ontouchstart="this.classList.toggle('hover');">
+                              <div class="container">
+                                <div class="front" style="background-image: url(https://unsplash.it/504/504/)">
+                                  <div class="inner">
+                                    <p>Rendann</p>
+                                    <span>Lorem ipsum</span>
+                                  </div>
+                                </div>
+                                <div class="back">
+                                  <div class="inner">
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col" ontouchstart="this.classList.toggle('hover');">
+                              <div class="container">
+                                <div class="front" 
+                                style = "background-image: url(https://unsplash.it/505/505/)">
+                                  <div class="inner">
+                                    <p>Reflupper</p>
+                                    <span>Lorem ipsum</span>
+                                  </div>
+                                </div>
+                                <div class="back">
+                                  <div class="inner">
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col" ontouchstart="this.classList.toggle('hover');">
+                              <div class="container">
+                                <div class="front" style="background-image: url(https://unsplash.it/506/506/)">
+                                  <div class="inner">
+                                    <p>Acirassi</p>
+                                    <span>Lorem ipsum</span>
+                                  </div>
+                                </div>
+                                <div class="back">
+                                  <div class="inner">
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col" ontouchstart="this.classList.toggle('hover');">
+                              <div class="container">
+                                <div class="front" style="background-image: url(https://unsplash.it/508/508/)">
+                                  <div class="inner">
+                                    <p>Sohanidd</p>
+                                    <span>Lorem ipsum</span>
+                                  </div>
+                                </div>
+                                <div class="back">
+                                  <div class="inner">
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                       </div>
                 </div>
                 <div id="links">
 
                 </div>
             </div>
             <footer>
+
 
             </footer>
         </div>
