--- a/index.html
+++ b/index.html
@@ -19,182 +19,55 @@
                     <ul id="topMenu">
                         <li><a href="#">회사 소개 <span></span></a>
                             <ul>
-                                <li><a href="introduce.html">인사말</a></li>
-                                <li><a href="history.html">연혁</a></li>
+                                <li><a href="introduce/introduce.html">인사말</a></li>
+                                <li><a href="introduce/history.html">연혁</a></li>
                             </ul>
                         </li>
                         <li><a href="#">사업 실적 및 분야 <span></span></a>
                             <ul>
-                                <li><a href="#">설계부</a></li>
-                                <li><a href="#">감리부</a></li>
-                                <li><a href="#">시공 컨설팅</a></li>
+                                <li><a href="department/department.html">설계부</a></li>
+                                <li><a href="department/supervisement.html">감리부</a></li>
+                                <li><a href="department/cunsulting.html">시공 컨설팅</a></li>
                             </ul>
                         </li>
                         <li><a href="#">자료</a>
                             <ul>
-                                <li><a href="#">법 관련 자료</a></li>
-                                <li><a href="#">양식 및 규정</a></li>
+                                <li><a href="reference/LR.html">법 관련 자료</a></li>
+                                <li><a href="reference/FR.html">양식 및 규정</a></li>
                             </ul>
                         </li>
                     </ul>
                 </nav>
             </header>
-            <div class="slide_wrapper">
-                <ul class="slides">
-                    <li>
-                        <a href="#">
-                            <img src="images/photo-1.jpg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="images/photo-2.jpg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="images/photo-3.jpg" alt="">
-                        </a>
-                    </li>
-                </ul>
-                <p class="controls">
-                    <span class="prev"></span>
-                    <span class="next"></span>
-                </p>
-            </div>
-
-            <div id="contents">
-                <div id="tabMenu">
-                    <div class="wrapper">
-                        <div class="cols">
-                            <div class="col" ontouchstart="this.classList.toggle('hover');">
-                              <div class="container">
-                                <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
-                                  <div class="inner">
-                                    <p>Diligord</p>
-                                    <span>Lorem ipsum</span>
-                                  </div>
-                                </div>
-                                <div class="back">
-                                  <div class="inner">
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col" ontouchstart="this.classList.toggle('hover');">
-                              <div class="container">
-                                <div class="front" style="background-image: url(https://unsplash.it/511/511/)">
-                                  <div class="inner">
-                                    <p>Rocogged</p>
-                                    <span>Lorem ipsum</span>
-                                  </div>
-                                </div>
-                                <div class="back">
-                                  <div class="inner">
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col" ontouchstart="this.classList.toggle('hover');">
-                              <div class="container">
-                                <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
-                                  <div class="inner">
-                                    <p>Strizzes</p>
-                                    <span>Lorem ipsum</span>
-                                  </div>
-                                </div>
-                                <div class="back">
-                                  <div class="inner">
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col" ontouchstart="this.classList.toggle('hover');">
-                              <div class="container">
-                                <div class="front" style="background-image: url(https://unsplash.it/503/503/)">
-                                  <div class="inner">
-                                    <p>Clossyo</p>
-                                    <span>Lorem ipsum</span>
-                                  </div>
-                                </div>
-                                <div class="back">
-                                  <div class="inner">
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col" ontouchstart="this.classList.toggle('hover');">
-                              <div class="container">
-                                <div class="front" style="background-image: url(https://unsplash.it/504/504/)">
-                                  <div class="inner">
-                                    <p>Rendann</p>
-                                    <span>Lorem ipsum</span>
-                                  </div>
-                                </div>
-                                <div class="back">
-                                  <div class="inner">
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col" ontouchstart="this.classList.toggle('hover');">
-                              <div class="container">
-                                <div class="front" 
-                                style = "background-image: url(https://unsplash.it/505/505/)">
-                                  <div class="inner">
-                                    <p>Reflupper</p>
-                                    <span>Lorem ipsum</span>
-                                  </div>
-                                </div>
-                                <div class="back">
-                                  <div class="inner">
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col" ontouchstart="this.classList.toggle('hover');">
-                              <div class="container">
-                                <div class="front" style="background-image: url(https://unsplash.it/506/506/)">
-                                  <div class="inner">
-                                    <p>Acirassi</p>
-                                    <span>Lorem ipsum</span>
-                                  </div>
-                                </div>
-                                <div class="back">
-                                  <div class="inner">
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col" ontouchstart="this.classList.toggle('hover');">
-                              <div class="container">
-                                <div class="front" style="background-image: url(https://unsplash.it/508/508/)">
-                                  <div class="inner">
-                                    <p>Sohanidd</p>
-                                    <span>Lorem ipsum</span>
-                                  </div>
-                                </div>
-                                <div class="back">
-                                  <div class="inner">
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                       </div>
-                </div>
-                <div id="links">
-
+            <div class="fixed01">
+                <div class="maincomment">
+                    <p>(주)Hyundai E&T</p>
+                    <p>기술단</p>
                 </div>
             </div>
+            <div class="contents01">
+                <div class="photo">
+                    <img src="images/contents01.jpg">
+                </div>
+                <div class="exp">
+                    <p>
+                        <b>Welcome to Shumway Van.</b>
+                    </p>
+                    <p>_________</p>
+                    <p>The law firm of Shumway Van was founded 
+                        by attorneys Michael C. Van and Douglas J. Shumway 
+                        in 2008 in response to business owners 
+                        and friends expressing concerns about 
+                        not being able to afford the large firms 
+                        they worked with for years because those law firms 
+                        were still charging as though the economy was strong 
+                        even though the Great Recession had decimated 
+                        the profits of many businesses and dramatically impacted 
+                        many employees of those businesses.</p>
+                </div>
+            </div>
+            <div class="fixed02"></div>
+            <div class="contents02"></div>
             <footer>
 
 
