--- a/index.html
+++ b/index.html
@@ -54,20 +54,47 @@
                         <b>Welcome to Shumway Van.</b>
                     </p>
                     <p>_________</p>
-                    <p>The law firm of Shumway Van was founded 
-                        by attorneys Michael C. Van and Douglas J. Shumway 
-                        in 2008 in response to business owners 
-                        and friends expressing concerns about 
-                        not being able to afford the large firms 
-                        they worked with for years because those law firms 
-                        were still charging as though the economy was strong 
-                        even though the Great Recession had decimated 
-                        the profits of many businesses and dramatically impacted 
-                        many employees of those businesses.</p>
+                    <p>
+                    The law firm of Shumway Van was founded 
+                    by attorneys Michael C. Van and Douglas J. Shumway 
+                    in 2008 in response to business owners 
+                    and friends expressing concerns about 
+                    not being able to afford the large firms 
+                    they worked with for years because those law firms 
+                    were still charging as though the economy was strong 
+                    even though the Great Recession had decimated 
+                    the profits of many businesses and dramatically impacted 
+                    many employees of those businesses. 
+                    </p>
                 </div>
             </div>
+            <div class="contents01-1">
+                
+            </div>
             <div class="fixed02"></div>
-            <div class="contents02"></div>
+            <div class="contents02">
+                <div class="photo">
+                    <img src="images/contents01.jpg">
+                </div>
+                <div class="exp">
+                    <p>
+                        <b>Welcome to Shumway Van.</b>
+                    </p>
+                    <p>_________</p>
+                    <p>The law firm of Shumway Van was founded 
+                    by attorneys Michael C. Van and Douglas J. Shumway 
+                    in 2008 in response to business owners 
+                    and friends expressing concerns about 
+                    not being able to afford the large firms 
+                    they worked with for years because those law firms 
+                    were still charging as though the economy was strong 
+                    even though the Great Recession had decimated 
+                    the profits of many businesses and dramatically impacted 
+                    many employees of those businesses.</p>
+                </div>
+            </div>
+            <div class="fixed03"></div>
+            <div class="contents03"></div>
             <footer>
 
 
