--- a/index.html
+++ b/index.html
@@ -69,7 +69,27 @@
                 </div>
             </div>
             <div class="contents01-1">
-                
+                <div class="contect">
+                    <p class="head">
+                        <b>Our Practice Areas</b>
+                    </p>
+                    <p class="body">
+                        Shumway Van is a full-service law firm with offices in Nevada, 
+                        Texas, and Utah. The following provides a general description of 
+                        many of our practice areas, but there are many specialized 
+                        and nuanced areas of law that we also practice, 
+                        so if you have a legal situation that doesn't appear 
+                        to fall into any of the practice areas we described 
+                        please give us a call anyway so that we can help you 
+                        to find an attorney that can help you, whether they are at our law firm 
+                        or another law firm.
+                    </p>
+                    <div class="body">
+                        <p class="phonenum" href="#">
+                            010-7310-0622
+                        </p>
+                    </div>
+                </div>
             </div>
             <div class="fixed02"></div>
             <div class="contents02">
