--- a/department/cunsulting.html
+++ b/department/cunsulting.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hyundai E&T</title>
-        <link rel="stylesheet" href="../css/cunsulting.css">
+        <link rel="stylesheet" href="../css/introduce.css">
     </head>
     <body>
         <div id="container">
@@ -19,15 +19,15 @@
                     <ul id="topMenu">
                         <li><a href="#">회사 소개 <span></span></a>
                             <ul>
-                                <li><a href="../introduce/introduce.html">인사말</a></li>
-                                <li><a href="../introduce/history.html">연혁</a></li>
+                                <li><a href="introduce.html">인사말</a></li>
+                                <li><a href="history.html">연혁</a></li>
                             </ul>
                         </li>
                         <li><a href="#">사업 실적 및 분야 <span></span></a>
                             <ul>
-                                <li><a href="department.html">설계부</a></li>
-                                <li><a href="supervisement.html">감리부</a></li>
-                                <li><a href="cunsulting.html">시공 컨설팅</a></li>
+                                <li><a href="../department/department.html">설계부</a></li>
+                                <li><a href="../department/supervisement.html">감리부</a></li>
+                                <li><a href="../department/cunsulting.html">시공 컨설팅</a></li>
                             </ul>
                         </li>
                         <li><a href="#">자료</a>
@@ -40,11 +40,14 @@
                 </nav>
             </header>
             <div class="picture">
-                <img src="../images/dep-1.jpg">
                 <div class="location">
-                    <p>홈 > 사업 실적 및 분야 > 시공 컨설팅</p>
+                    <p>홈 > 사업 실적 및 분야</p>
+                    <p class="here">
+                        시공 컨설팅
+                    </p>
                 </div>
             </div>
         </div>
     </body>
 </html>
+
