--- a/introduce/introduce.html
+++ b/introduce/introduce.html
@@ -40,11 +40,14 @@
                 </nav>
             </header>
             <div class="picture">
-                <img src="../images/intro-1.jpg">
                 <div class="location">
-                    <p>홈 > 회사 소개 > 인사말</p>
+                    <p>홈 > 회사 소개</p>
+                    <p class="here">
+                        인사말
+                    </p>
                 </div>
             </div>
         </div>
     </body>
 </html>
+
