--- a/introduce/history.html
+++ b/introduce/history.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hyundai E&T</title>
-        <link rel="stylesheet" href="../css/history.css">
+        <link rel="stylesheet" href="../css/introduce.css">
     </head>
     <body>
         <div id="container">
@@ -40,11 +40,14 @@
                 </nav>
             </header>
             <div class="picture">
-                <img src="../images/intro-1.jpg">
                 <div class="location">
-                    <p>홈 > 회사 소개 > 연혁</p>
+                    <p>홈 > 회사 소개</p>
+                    <p class="here">
+                        연혁
+                    </p>
                 </div>
             </div>
         </div>
     </body>
 </html>
+
