--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
             <header>
                 <div id="logo">
                     <a href="index.html">
-                        <h1>(주) 현대이엔티</h1>
                     </a>
-
                 </div>
                 <nav>
                     <ul id="topMenu">
@@ -47,7 +45,7 @@
             </div>
             <div class="contents01">
                 <div class="photo">
-                    <img src="images/contents01.jpg">
+                    <img src="images/busanstation.png">
                 </div>
                 <div class="exp">
                     <p>
