--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <header>
                 <div id="logo">
                     <a href="index.html">
+                        <img src="images/logo.png">
                     </a>
                 </div>
                 <nav>
@@ -49,7 +50,7 @@
                 </div>
                 <div class="exp">
                     <p>
-                        <b>Welcome to Shumway Van.</b>
+                        <b>부산역 1, 2단계 공사 참여</b>
                     </p>
                     <p>_________</p>
                     <p>
@@ -112,7 +113,9 @@
                 </div>
             </div>
             <div class="fixed03"></div>
-            <div class="contents03"></div>
+            <div class="contents03">
+                
+            </div>
             <footer>
 
             </footer>
