--- a/index.html
+++ b/index.html
@@ -39,22 +39,75 @@
                 </nav>
             </header>
             <div class="fixed01">
-                <div class="maincomment">
-                    <p>(주)Hyundai E&T</p>
-                    <p>기술단</p>
+                <div class="sideslide">
+                    <div class="maincomment">
+                        <p>
+                            (주)Hyundai E&T<br>
+                            기술단
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="contents01">
-                <div class="photo">
-                    <img src="images/busanstation.png">
+
+                <div class="practicez">
+                    <div class="practice">
+                        <p><b>PRACTICE</b></p>
+                        <p>전문분야</p>
+                    </div>
                 </div>
-                <div class="exp">
+
+                <div class="explane">
+                    <div class="exp">
+                        <div class="depart">
+                            <p>
+                                ■
+                                <a href="department/department.html"><b> 설계부</b></a>
+                            </p>
+                            <p>_________</p>
+                            <p>
+                                설계를 한다
+                            </p>
+                        </div>
+                        <div class="sup">
+                            <p>
+                                ■
+                                <a href="department/supervisement.html"><b> 감리부</b></a>
+                            </p>
+                            <p>_________</p>
+                            <p>
+                                감리를 한다
+                            </p>
+                        </div>
+                        <div class="cun">
+                            <p>
+                                ■
+                                <a href="department/cunsulting.html"><b> 시공 컨설팅</b></a>
+                            </p>
+                            <p>_________</p>
+                            <p>
+                                시공 컨설팅을 한다
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="contents01-1">
+                <div class="contect">
+
+                </div>
+            </div>
+            <div class="fixed02"></div>
+            <div class="contents02">
+                <div class="photo">
+                    <img src="images/contents01.jpg">
+                </div>
+                <div class="">
                     <p>
-                        <b>부산역 1, 2단계 공사 참여</b>
+                        <b>Welcome to Shumway Van.</b>
                     </p>
                     <p>_________</p>
-                    <p>
-                    The law firm of Shumway Van was founded 
+                    <p>The law firm of Shumway Van was founded 
                     by attorneys Michael C. Van and Douglas J. Shumway 
                     in 2008 in response to business owners 
                     and friends expressing concerns about 
@@ -63,11 +116,11 @@
                     were still charging as though the economy was strong 
                     even though the Great Recession had decimated 
                     the profits of many businesses and dramatically impacted 
-                    many employees of those businesses. 
-                    </p>
+                    many employees of those businesses.</p>
                 </div>
             </div>
-            <div class="contents01-1">
+            <div class="fixed03"></div>
+            <div class="contents03">
                 <div class="contect">
                     <p class="head">
                         <b>Our Practice Areas</b>
@@ -89,32 +142,6 @@
                         </p>
                     </div>
                 </div>
-            </div>
-            <div class="fixed02"></div>
-            <div class="contents02">
-                <div class="photo">
-                    <img src="images/contents01.jpg">
-                </div>
-                <div class="exp">
-                    <p>
-                        <b>Welcome to Shumway Van.</b>
-                    </p>
-                    <p>_________</p>
-                    <p>The law firm of Shumway Van was founded 
-                    by attorneys Michael C. Van and Douglas J. Shumway 
-                    in 2008 in response to business owners 
-                    and friends expressing concerns about 
-                    not being able to afford the large firms 
-                    they worked with for years because those law firms 
-                    were still charging as though the economy was strong 
-                    even though the Great Recession had decimated 
-                    the profits of many businesses and dramatically impacted 
-                    many employees of those businesses.</p>
-                </div>
-            </div>
-            <div class="fixed03"></div>
-            <div class="contents03">
-                
             </div>
             <footer>
                 <div class="address">
