--- a/introduce/introduce.html
+++ b/introduce/introduce.html
@@ -11,7 +11,7 @@
             <header>
                 <div id="logo">
                     <a href="../index.html">
-                        <h1>(주) 현대이엔티</h1>
+                        <img src="../images/logo.png">
                     </a>
 
                 </div>
@@ -47,6 +47,7 @@
                     </p>
                 </div>
             </div>
+            
         </div>
     </body>
 </html>
